# ciekawa-invoices

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generate_oauth_token.py  main.py  pyproject.toml  reset_failed_invoices.py  reset_pipeline.py  test_firestore_connection.py  test_gmail_retrieval.py  test_sample_workflow.py  test_sheets_connection.py
config/: categories.yaml
docs/: architecture.md  backlog.md  deployment.md  deployment_checklist.md  python_guide.md  testing_firestore.md  testing_gmail.md  testing_notification.md  testing_sample_data.md  testing_sheets.md
prompts/: invoice_extraction_instruction.md  legacy-extract-invoice-attrs.md
sample_data/: output_processed_invoices.csv  processed_invoices.csv.txt
src/: config.py  main.py
src/domain/: entities.py  invoice_schema.py
src/infrastructure/: email_notification_adapter.py  firestore_adapter.py  gemini_adapter.py  gmail_adapter.py  json_repository.py  sheets_adapter.py  storage.py  vertex_ai_adapter.py
src/ports/: interfaces.py
src/services/: notification_service.py  processing_service.py  retrieval_service.py  sheets_service.py
tests/integration/: test_workflow_integration.py
tests/unit/: test_error_reporting.py  test_gmail_adapter.py  test_processing_service.py  test_processing_service_extended.py  test_retrieval_service.py
